# wechat-articles

./: 01_开篇_改版.md  02_LLM调用的本质_改版.md  03_Prompt的本质_改版.md  04_Memory的本质_改版.md  05_RAG的本质_改版.md  06_Tool与FunctionCalling的本质_改版.md  07_Agent循环的本质_改版.md  08_多Agent的本质_改版.md  09_Agent的7层架构_改版.md  10_不用框架_200行Python手写工业级雏形Agent_改版.md
agent-code/: .gitignore  README.md  pyproject.toml
agent-code/02_llm_call_essence/: run_demo.py
agent-code/03_prompt_essence/: run_demo.py
agent-code/04_memory_essence/: run_demo.py
agent-code/05_rag_essence/: run_demo.py
agent-code/06_tool_essence/: run_demo.py
agent-code/07_agent_loop/: run_demo.py
agent-code/08_multi_agent/: run_demo.py
agent-code/09_architecture/: run_demo.py
agent-code/10_handwritten_agent/: run_demo.py
agent-code/src/agent_code/: __init__.py  agent_loop.py  handwritten_agent.py  llm_call.py  memory_essence.py  multi_agent.py  prompt_essence.py  rag_essence.py  seven_layer.py  tool_essence.py
agent-code/tests/: test_companion_code.py
